web/www/style.css
body{
    background-color: #0a0a0a;
    font-family: 'Noto Sans', sans-serif;
    overflow-x: hidden;
    margin: 0px;
    touch-action: manipulation;
}

#sign_in_section{
    position: absolute; /* Stay in place */
    float: right;
    right: 1vw;
    top: 1vh;
    height: 8vh;
    width: 8vw;
    max-height: 3em;
    max-width: 3em;
}

#sign_in{
    display: none;
    width: 100%;
    height: 100%;
}

#sign_in img{
    filter: invert(100%);
    width: 100%;
    height: auto;
}

#page_console{
    position: fixed;
    float: left;
    left: 0;
    bottom: 0;
    font-size: 4vh;
    color: #ffffff;
    text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
    z-index: 999;
}
#header{
    margin-top: 0px;
    padding-top: 1.5vh;
    background: #0a0a0a;
    z-index: 99;
    padding-bottom: 1vh;
}

#header_text{
    padding-top: 0vh;
    padding-bottom: 1vh;
    text-align: center;
    color: #f7f7f7;
    margin-top: 1.0vh;
    margin-bottom: 1.0vh;
    font-weight: 100;
    font-family: 'Raleway', sans-serif;
    font-size: 4em !important;
}

hr{
    border: 1px solid #5a5a5a;
}

.hr_line{ 
    display:block;
    border:none;
    color:white;
    height:1px;
    background:black;
    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 600, from(#fff), to(#000));
}

#interactive_area{
    width: 100vw;
    text-align: center;
}

#input{
    background-color: #5a5a5a;
    border: 1px solid transparent;
    line-height: 0em;
    font-size: 1.2em;
    text-align: center;
    margin: auto;
    margin-top: 0.8em;
    margin-bottom: 0.3em;
    width: 40ch;
    height: 1.5em;
    max-width: 70%;
    white-space: nowrap;
    overflow: hidden;
    cursor: text;
}

#user_input{
    line-height: 1.6em;
    margin: auto;
    width: 40ch;
    height: 1.8em;
    color: #fafafa;
    font-weight: 500;
    outline: none;
}

#at_symbol{
    color: #aaaaaa;
    font-weight: 600;
    -webkit-user-select: none; /* Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
}

#buttons{
    padding-top: 0.4em;
    padding-bottom: 0.75em;
}

button {
    background-color: #e7e7e7; /* Green */
    border: none;
    color: black;
    padding: 0.5em 2.5vw;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 0.8em;
    font-weight: 500;
    width: 20ch;
    height: 2em;
}

#process_user_result, #end_results_target{
    text-align: center;
    color: #fafafa;
}

#target{
    padding-left: 3vw;
    padding-right: 3vw;
    padding-bottom: 1.5vh
    width: 100vw;
    overflow-x: hidden;
    overflow-y: hidden;
}

#grid_invis{
    display: none;
}

#post{
    position: relative;
}

.loading_message{
    position: absolute;
    top: 50%;
    bottom: 50%;
    height: 100%;
    width: 100%;

    text-align: center;
 
    color: #aaaaaa;
    z-index: 6;
}

.gallery_images{
    float: middle;
}

.main_image{
    position: relative;
    z-index: 5;
    left: 0px;
    max-width: 100%;
    max-height: 100%;
}

.cover {
    -webkit-animation: 2s show;
    -moz-animation: 2s show;
    -ms-animation: 2s show;
    animation: 2s show;

    -webkit-animation-fill-mode: forwards;
    -moz-animation-fill-mode: forwards;
    -ms-animation-fill-mode: forwards;
    animation-fill-mode: forwards;

}

.blur_image {
    position: absolute;
    width: 150%;
    height: auto;
    left: -25%;
    top: -25%;
    z-index: -1;
    -webkit-filter: blur(15px);
    -moz-filter: blur(15px);
    -o-filter: blur(15px);
    -ms-filter: blur(15px);
    filter: blur(15px);
    opacity: 0.3;
}

.grid-item{
    position: relative;
}

.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 999; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgba(0, 0, 0, 0.7);
}

/* Modal Content/Box */
.modal_content {
    animation-name: zoom;
    animation-duration: 0.1s;
    margin: auto;
    z-index: 999;
}

.modal_content img{
    margin: auto;
    opacity: 1.0;
}

@keyframes zoom {
  from {transform:scale(0)} 
  to {transform:scale(1)}
}

#picture_data{
    font-weight: lighter;
    font-size: 1.9vh;
    color: #fafafa;
    opacity: 0.9;
}

#picture_data h4{
    margin-bottom: 0px;
}
#picture_data h5{
    font-size: 1.3vh;
    font-weight: lighter;
    margin-top: 0.5vh;
}
#picture_data a{
    color: inherit;
    font-size: inherit;
}

@-webkit-keyframes show {
    from { opacity: 0 }
    to { opacity: 1 }
}
@-moz-keyframes show {
    from { opacity: 0 }
    to { opacity: 1 }
}
@-ms-keyframes show {
    from { opacity: 0 }
    to { opacity: 1 }
}
@keyframes show {
    from { opacity: 0 }
    to { opacity: 1 }
}

#footer{
    font-size: 0.9em;
    margin-right: 1vw;
    text-align: right;
    color: #999999;
}

